--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "install": "^0.13.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
   },
