--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "install": "^0.13.0",
